refactor run tests